fix(viewer): no horizontal scroll

--- a/site/src/components/KilledNamesListGrid/killedNamesListGrid.module.css
+++ b/site/src/components/KilledNamesListGrid/killedNamesListGrid.module.css
@@ -246,7 +246,7 @@
 }
 
 .gridContainer {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .gridContainer::-webkit-scrollbar {
